added new line in index.html

--- a/exercise9/about.html
+++ b/exercise9/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Exercise</title>
+<title>Exercise-2</title>
 </head>
 <body>
 
-<h1>Commit-1</h1>
+<h1>Commit-2</h1>
 <p>Created a new file</p>
-<p>added new line<p>
+
 </body>
 </html>
